# creoboros

./: .dockerignore  .editorconfig  .gitignore  Cargo.toml  Dockerfile  Makefile.toml  README.md  demo.yml
.devcontainer/: Dockerfile  devcontainer.json
demo/: demo.tpl  demo.yml  nginx.tpl  nginx.yml
src/: macros.rs  main.rs  prelude.rs
src/actions/: action.rs  file_template.rs  mod.rs  run.rs
src/agents/: mod.rs
src/agents/executor/: mod.rs
src/agents/service/: mod.rs
src/agents/timer/: mod.rs
src/args/: mod.rs
src/config/: builders.rs  definition.rs  misc.rs  mod.rs
src/error/: mod.rs
src/format/: formatters.rs  mod.rs
src/loggers/: log_logger.rs  mod.rs
src/loggers/file/: mod.rs
src/loggers/stdout/: mod.rs
src/modules/: mod.rs
src/modules/agents/: mod.rs  process.rs  start.rs  timer.rs
src/modules/loggers/: console.rs  file.rs  mod.rs  regex_parser.rs  stdout.rs
src/runtime/: executor.rs  message.rs  mod.rs  signals.rs
src/templates/: mod.rs  ser.rs
