[package]
name = "cerberus"
version = "0.1.0"
authors = ["Phil Proctor <philliptproctor@gmail.com>"]
edition = "2018"

[dependencies]
clap = "2.33"
futures = "0.1"
structopt = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
signal-hook = "0.1"
unstructured = "0.3"
lazy_static = "1.4"
serde-humanize-rs = "0.1"
chrono = "0.4"
parking_lot = "0.9"
async-std = "0.99"
crossbeam-channel = "0.3"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
