[package]
name = "creoboros"
description = "A docker process manager"
version = "0.1.0"
authors = ["Phil Proctor <philliptproctor@gmail.com>"]
edition = "2018"
documentation = "https://docs.rs/creoboros"
repository = "https://github.com/proctorlabs/cerberus"
keywords = []
categories = []
license = "MIT"
readme = "README.md"
exclude = [".github/**"]

[package.metadata.deb]
maintainer = "Phil Proctor <philliptproctor@gmail.com>"
copyright = "2019, creoboros development team"
license-file = ["LICENSE", "5"]
extended-description = "A docker process manager"
depends = "$auto"
section = "utility"
priority = "optional"

[dependencies]
# CLI
clap = "2.33"
structopt = "0.3"
signal-hook = "0.1"

# Misc
lazy_static = "1.4"
chrono = "0.4"
derive_more = "0.15"
derive-new = "0.5"
regex = "1.3"

# Config
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
serde-humanize-rs = "0.1"
unstructured = "0.3"
templar = "0.1"

# Async
async-std = "0.99.8"
futures-io-preview = "=0.3.0-alpha.18"
futures-channel-preview = "=0.3.0-alpha.18"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
